--- a/style.css
+++ b/style.css
@@ -63,7 +63,24 @@ nav .nav-item > a {
 /* ingredient div */
 #ingredient-div{
 	display: none;
-	display: grid;
 	grid-template-columns: repeat(1, 1fr);
 	grid-gap: 20px;
+	
+}
+.ingredient-meal{
+	font-family: Cambria;
+    border-radius: 10px;
+    background-color: rgb(233, 232, 232);
+    color: black;
+	font-size: 25px;
+	margin: 1% 25%;
+}
+
+.ingredient-meal img{
+	width: 100%;
+	height: 100%;
+}
+ul {
+	margin-left: 10px;
+	list-style-image: url(images/tick.png);
 }
